# DomesticEconomy

./: .gitignore  Bot_run.sh  MonthResults.py  README.md  Template.html  alembic.ini  dbZeroEuro.py  dbhelper.py  economybot.py  fixture.py  flask_app.py  messages.py  models.py  pyproject.toml  setup.py
migrations/: env.py
migrations/versions/: 2023_04_04_18-fcb92a1625d7_set_nullable_true_on_general_foreignkey.py  a3fb5ebbf9e0_fisrt_database_model.py
tests/: conftest.py  test_db.py
